--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,38 @@
     color: #fff;
     font-size: 100px;
   }
+  .signup_page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(238, 230, 230, 0.867);
+    height: 580px;
+  }
+  .signup_page>h3{
+    font-size: 2rem;
+    letter-spacing: 0.8rem;
+    margin-bottom: 25px;
+  }
+  .signup_page>h2{
+    font-size: 1.5rem;
+    margin-bottom: 25px;
+  }
+  .signup_page>button{
+    width: 150px;
+    height: 40px;
+    background: #333;
+    color: #fff;
+    border: none;
+    font-size: 1.3rem;
+    letter-spacing: 0.3rem;
+    border-radius: 5px;
+  }
+  .signup_page>button:hover{
+    background: #fff;
+    color: #111;
+    border: 1px solid#111;
+  }
+  .signup_page>h3>a{
+    color:#116466;
+  }
